# yt-dlp-broken-extractor

./: .gitignore  README.md  pyproject.toml
animeku/yt_dlp_plugins/extractor/: animeku.py
animepahe/yt_dlp_plugins/extractor/: animepahe.py
broken/: README.md
broken/otakudesu/yt_dlp_plugins/extractor/: otakudesu.py
broken/saikonime/yt_dlp_plugins/extractor/: saikonime.py
broken/yt_dlp_plugins/extractor/: animeku.py  otakudesu.py  saikonime.py
hentaicop/yt_dlp_plugins/extractor/: hentaicop.py
nekopoi/yt_dlp_plugins/extractor/: myvidplay.py  nekopoi.py  streampoi.py
otakudesu/yt_dlp_plugins/extractor/: otakudesu.py
saikonime/yt_dlp_plugins/extractor/: saikonime.py
samehadaku/yt_dlp_plugins/extractor/: samehadaku.py
yt_dlp_plugins/extractor/: animeindo.py  animepahe.py  filedon.py  hentaicop.py  melong.py  minioppai.py  myvidplay.py  nekopoi.py  odvidhide.py  otakudesu.py  pixeldrain.py  randomextractors.py  samehadaku.py  streampoi.py  tokusatsuindo.py  vidara.py  wibufile.py
